# bitcoin_datapipeline

./: .env.example  .gitignore  AFTER_MIDTERM.md  CLAUDE.md  LICENSE  README.md  __init__.py  explain_ingestor.md  idea.md  idea_specified_1.md  idea_specified_2.md  idea_structured_1.md  pyproject.toml  pytest.ini  requirements-dev.txt  specific_inference.md
deployment/: README.md
deployment/env_example/: .env.aggregator  .env.data-connector  .env.example  .env.rest-ingestor  .env.sbe-ingestor
deployment/scripts/: setup-dev.sh  setup-localstack.sh
deployment/terraform/: README.md
deployment/terraform/environments/dev/: backend.tf  dev.tfvars  main.tf  outputs.tf  variables.tf
deployment/terraform/shared/: backend.tf  outputs.tf  variables.tf
depreceated-ingestor/: .env.example  DATA_COLLECTION.md  README.md  client_documentation.md  requirements-dev.txt  test_sbe_decoder.py
depreceated-ingestor/config/: local.yaml  prod.yaml
depreceated-ingestor/src/utils/: retry.py
depreceated-ingestor/tests/unit/: test_kinesis_client.py
docs/: README.md
docs/architecture/: ARCHITECTURE.md  DATA_PIPELINE.md  RELIABILITY.md
docs/deployment/: AWS_DEPLOYMENT_GUIDE.md  SERVICES_DEPLOYMENT.md
docs/development/: CLAUDE.md  SERVICES_ROADMAP.md
docs/operations/: MONITORING.md  TESTING_GUIDE.md
docs/schemas/: HYBRID_S3_RDBMS_ANALYSIS.md  RDS_SCHEMA.md  REDIS_SCHEMA.md  S3_SCHEMA.md
schemas/avro/: BestBidAsk.avsc  MarketTrade.avsc  market_data.avsc
scripts/: setup-dev.sh
services/aggregator/config/: prod.yaml
services/data-connector/config/: local.yaml
services/data-connector/src/: db_writer.py
services/data-connector/src/config/: settings.py
services/ingestor/: Dockerfile  README.md  build_sbe_decoder.sh  pytest.ini  requirements.txt
services/ingestor/config/: dev.yaml  local.yaml
services/ingestor/src/: health_check.py  kinesis_producer.py  main.py  metrics.py  rest_client.py  serializer.py  ws_json_client.py
services/ingestor/src/clients/: binance_sbe.py
services/ingestor/src/config/: aws_config.py  settings.py
services/ingestor/src/sbe_decoder/: setup.py
services/ingestor/src/services/: health_service.py  ingest_service.py  metrics_service.py
services/ingestor/tests/: conftest.py  test_kinesis_producer.py  test_serializer.py  test_websocket_client.py
services/ingestor/tests/ingestor_implement/: test_data_format.py
services/ingestor/tests/integration/: test_ingest_service.py
services/ingestor/tests/unit/: test_config.py
services/rest-ingestor/: Dockerfile
services/rest-ingestor/src/: checkpoint.py  collector.py  main.py
services/rest-ingestor/src/writers/: s3_writer.py
src/bitcoin_datapipeline/: __init__.py
src/bitcoin_datapipeline/common/: __init__.py
src/bitcoin_datapipeline/common/config/: __init__.py
src/bitcoin_datapipeline/common/types/: __init__.py
src/bitcoin_datapipeline/common/utils/: __init__.py
src/bitcoin_datapipeline/schemas/: __init__.py
src/bitcoin_datapipeline/schemas/avro/: DepthDelta.avsc
src/bitcoin_datapipeline/services/: __init__.py
src/bitcoin_datapipeline/services/aggregator/: Dockerfile  README.md  requirements.txt
src/bitcoin_datapipeline/services/data_connector/: Dockerfile  README.md  requirements.txt
src/bitcoin_datapipeline/services/gap_detector/: README.md
src/bitcoin_datapipeline/services/inference/: README.md
src/bitcoin_datapipeline/services/re_anchor_service/: README.md
src/bitcoin_datapipeline/services/sbe_ingestor/: Dockerfile  build_sbe_decoder.sh  build_sbe_decoder_test.sh  requirements.txt
test/: .env.template
test/e2e/: test_pipeline.py
test/scripts/: setup-test-env.sh
test/unit/: test_rest_client.py  test_sbe_client.py
tests/: README.md  docker-compose.test.yml
tests/configs/: rest-local.yaml  sbe-local.yaml
tests/integration/: test_full_services.py
tests/scripts/: run-all-tests.sh  setup-localstack.sh  setup-test-env.sh
tests/unit/: test_rest_client.py  test_sbe_client.py
(+34 files in other folders)
